--- a/Ethiopia/onClickEthiopia.html
+++ b/Ethiopia/onClickEthiopia.html
@@ -86,6 +86,7 @@ function processTownPriceData(d, i){
 			return +d;
 		}
 	}
+	
 	var array = {
 		item: d.item,
 		region: d.region,
@@ -131,7 +132,7 @@ var townDotOpacity = 0.7;
 var histDotRadius = 1.5;
 
 
-//SLIDER FUNCTIONS
+/*//SLIDER FUNCTIONS
 var sliderMonths = [];
 for (var i=2010; i<=2014;i++) {
 	for (var j=0;j<=11;j++) {
@@ -197,7 +198,7 @@ d3.selectAll('.ui-slider-handle')
 	.append('path')
 	.attr('d', "M0 2L13 2L13 13L7 19L0 12 Z")
 ;
-
+*/
 //THE DATA QUEUE
 queue()
 	.defer(d3.json, "maps/ethiopiaZones.json") //the zone map
@@ -260,10 +261,30 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		return regionFeatures;
 	}
 
+	function makeResponsive(svg){
+		var container = d3.select(svg.node().parentNode)
+		var width = parseInt(svg.style("width"))
+        var height = parseInt(svg.style("height"))
+        var aspect = width / height
+
+		svg.attr("viewBox", "0 0 " + width + " " + height)
+        	.attr("perserveAspectRatio", "xMidYMid")
+
+        d3.select(window).on("resize." + container.attr("id"), resize);
+
+    // get width of container and resize svg to fit it
+    	function resize() {
+        	var targetWidth = parseInt(container.style("width"));
+        	svg.attr("width", targetWidth);
+        	svg.attr("height", Math.round(targetWidth / aspect));
+    	}
+	}
+
 	//GETTING THE DATA READY
-	var dates = $('#slider').slider('values');
-	var startDate = sliderMonths[dates[0]];
-   	var endDate = sliderMonths[dates[1]];
+	//var dates = $('#slider').slider('values');
+	var startDate = dateFormat.parse("2010-01-01")// sliderMonths[dates[0]];
+   	var endDate = dateFormat.parse("2014-12-01")//sliderMonths[dates[1]];
+
 	var sel = document.getElementById('productSelectPrice'); //selecting the default based on current input
 	var product = sel.options[sel.selectedIndex].value;
 	var townData = getTownData(townPriceData,startDate, endDate, product)
@@ -274,15 +295,19 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 	var containerSize = d3.select('#mapContainer').node().getBoundingClientRect()
   	var margin = {top: 0.008*containerSize.height , right: 0.008*containerSize.width, bottom: 0.008*containerSize.height, left: 0.008*containerSize.width};
   	var padding = {top: 0.006*containerSize.height, right: 0.006*containerSize.width, bottom: 0.006*containerSize.height, left: 0.006*containerSize.width};
-  	var width = containerSize.width - margin.right - margin.left; //Chart width
-  	var height = containerSize.height - margin.top - margin.bottom; //Chart height
+  	var mapWidth = containerSize.width - margin.right - margin.left; //Chart width
+  	var mapHeight = containerSize.height - margin.top - margin.bottom; //Chart height
 
   	var map = d3.select('#mapContainer').append('svg') //http://bl.ocks.org/mbostock/3019563
         .attr({
-          height: height + margin.top + margin.bottom,
-          width: width + margin.left + margin.right
+          height: mapHeight + margin.top + margin.bottom,
+          width: mapWidth + margin.left + margin.right
         })
-      	.attr("transform", "translate(" + (margin.left) + "," + (margin.top)+ ")");//moving the origin to the point where it starts
+        .attr("id", "mapSvg")
+      	.attr("transform", "translate(" + (margin.left) + "," + (margin.top)+ ")")//moving the origin to the point where it starts
+      	.call(makeResponsive)
+      	//.attr("viewBox", "0 0 " + mapWidth + " " + mapHeight )
+        //.attr("preserveAspectRatio", "xMidYMid");
 
 	//DEFINING THE COLOR AND AXIS FUNCTION
 	var max = d3.max(townData, function(d) { return d.price; });
@@ -308,7 +333,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
     //DRAWING THE LEGEND
     var key = map.append("g")
         .attr("class", "key")
-        .attr("transform", "translate("+(width*.90)+","+(height*.5)+")");
+        .attr("transform", "translate("+(mapWidth*.90)+","+(mapHeight*.5)+")");
 
     key.selectAll("rect")
         .data(color.range().map(function(d, i) {
@@ -337,9 +362,9 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
           "<strong>Region:</strong> <span style='color:silver'>" + d.region+ "</span>" + "<br>" +
           "<strong>Avg. Price:</strong> <span style='color:silver'>" + d.price + "</span>"
           ;
-    });
+    	});
 
-      var regionTip = d3.tip()
+    var regionTip = d3.tip()
       .attr('class', 'd3-tip')
       .offset([0, 0])
       .direction('e')
@@ -347,7 +372,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
           return "<strong>Region:</strong> <span style='color:silver'>" + d.properties.regionName+ "</span>" + "<br>" +
           "<strong>Avg. Price:</strong> <span style='color:silver'>" + d.properties.price + "</span>"
           ;
-    });
+    	});
 
     //MERGING THE MAP AND PRICE DATA
     var zoneFeatures = topojson.feature(ethiopiaZones, ethiopiaZones.objects.ETH_ADM2).features;
@@ -359,12 +384,12 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 	var projectionZone = d3.geo.mercator()
 		.center([8.5,10.5])
 		.scale(1400)
-		.translate([-0.85*width, .38*height]);
+		.translate([-0.85*mapWidth, .38*mapHeight]);
 
 	var projectionRegion = d3.geo.mercator()
 		.center([8.5,10.5])
 		.scale(800)
-		.translate([-0.05*width, .2*height]);
+		.translate([-0.05*mapWidth, .2*mapHeight]);
 
 	var pathZone = d3.geo.path()
 		.projection(projectionZone);
@@ -534,42 +559,46 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 	var containerSize = d3.select('#lineChartContainer').node().getBoundingClientRect()
   	var margin = {top: 0.08*containerSize.height , right: 0.006*containerSize.width, bottom: 0.22*containerSize.height, left: 0.06*containerSize.width};
   	var padding = {top: 0.006*containerSize.height, right: 0.012*containerSize.width, bottom: 0.006*containerSize.height, left: 0.06*containerSize.width};
-  	var width = containerSize.width - margin.right - margin.left; //Chart width
-  	var height = containerSize.height - margin.top - margin.bottom; //Chart height
+  	var liWidth = containerSize.width - margin.right - margin.left; //Chart width
+  	var liHeight = containerSize.height - margin.top - margin.bottom; //Chart height
 
   	var lineChart = d3.select('#lineChartContainer').append('svg') //http://bl.ocks.org/mbostock/3019563
         .attr({
-          height: height + margin.top + margin.bottom,
-          width: width + margin.left + margin.right
+          height: liHeight + margin.top + margin.bottom,
+          width: liWidth + margin.left + margin.right
         })
-      	.append('g')
-      	.attr("transform", "translate(" + (margin.left) + "," + (margin.top)+ ")");//moving the origin to the point where it starts
+      	.attr("id", "lineSvg")
+      	.attr("viewBox", "0 0 " + liWidth + " " + liHeight )
+        .attr("preserveAspectRatio", "xMinYMin")
+        .append('g')
+      	.attr("transform", "translate(" + (margin.left) + "," + (margin.top)+ ")")//moving the origin to the point where it starts
+      	
 
     lineChart.append("clipPath")
 		.attr('id', 'lineclip')
 		.append('rect')
 		.attr("x", 0)
-		.attr("width", width)
+		.attr("width", liWidth)
 		.attr("y", 0)
-		.attr("height", height);
+		.attr("height", liHeight);
 
 	var lineRectBackground = lineChart.append('rect')
 		.attr({
 			x: 0,
-			width: width,
+			width: liWidth,
 			y: 0,
-			height: height,
+			height: liHeight,
 			class: 'lineRect'
 		});
 
 	//DEFINING THE CHARTING VARIABLES
 	var xScale = d3.time.scale()
 		.domain(d3.extent(months))
-		.range([0, width]);
+		.range([0, liWidth]);
 
 	var yScale = d3.scale.linear()
 		.domain([0, d3.max(townPriceData.filter(function(e) {return e.item===product}).map(function(d) { return d.price; }))*1.05])
-		.range([height, 0]);
+		.range([liHeight, 0]);
 
     var line = d3.svg.line()
 	    .defined(function(d) { return (d !== null && !isNaN(d.price)); })
@@ -589,7 +618,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
     var yAxis = d3.svg.axis()
         .scale(yScale).ticks(5)
         .orient("left")
-        .tickSize(-width)
+        .tickSize(-liWidth)
         .tickPadding(6)
         .tickFormat(function(d) { return d});
 
@@ -607,7 +636,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
     //DRAWING THE ELEMENTS
     var xAxisNodes = lineChart.append("g")
           .attr("class", "x axis")
-          .attr("transform", "translate(0," + height + ")")
+          .attr("transform", "translate(0," + liHeight + ")")
           .call(xAxis);
 
     var g = lineChart.append("g")
@@ -621,7 +650,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 	var voronoi = d3.geom.voronoi()
 	    .x(function(d) { return xScale(d.date); })
 	    .y(function(d) { return yScale(d.price); })
-	    .clipExtent([[0, 0], [width, height]]);
+	    .clipExtent([[0, 0], [liWidth, liHeight]]);
 
 
   	var voronoiGroup = lineChart.append("g")
@@ -660,8 +689,8 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 			.attr("d", function(d) { return "M" + d.join("L") + "Z"; })
 			.datum(function(d) { return d.point; })
 			.style("cursor","default")
-			.on("mouseover", mouseoverLine)
-			.on("mouseout", mouseoutLine);
+			//.on("mouseover", mouseoverLine)
+			//.on("mouseout", mouseoutLine);
 
 		focus.append("circle")
 			.attr("r", 3.5)
@@ -792,7 +821,6 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 	var tempRegions = uniq_fast(townPriceData.map(function(e){return e.region}));
 	var masterRegionList = initializeTownList(tempRegions, 0, 1);
 
-
 	function onClickRegion(d){
 		//identify towns in the region
 		var regionTowns = uniq_fast(townPriceData.filter(function(e){return e.region === d.properties.regionName}).map(function(f){return f.town}))
@@ -916,25 +944,23 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 	}
 
 	//DEFINING THE MOUSEOVER FUNCTIONS FOR LINE
-	function mouseoverLine(d) {
-		console.log(d)
-		//histogram
-		var meanPrice = d3.round(d3.mean(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate && e.town === d.town}), function(g){return g.price}),2)
-		d3.selectAll('.histText').text(d.town + " Price on "+monthYear(d.date)+": " + d.price + " birr" + ", Town Avg.: " +meanPrice+ " birr")
-		d3.selectAll('.histDots').filter(function(t){return t.town === d.town && t.date === d.date}).style('fill', 'red').attr({r: histDotRadius*2}).moveToFront()
+	/*function mouseoverLine(d) {
+		//we only need to interact if the line is from an active town or is Ethiopia
+		if(masterTownList.filter(function(e){return e.town === d.town})[0].active){//checks if town is active
+			tip.show(d);
+			//histogram
+			var meanPrice = d3.round(d3.mean(townPriceData.filter(function(f){return f.item == product && f.date>= startDate && f.date <= endDate && f.town === d.town}), function(g){return g.price}),2)
+			d3.selectAll('.histText').text(d.town + " Price on "+monthYear(d.date)+": " + d.price + " birr" + ", Town Avg.: " +meanPrice+ " birr")
+			d3.selectAll('.histDots').filter(function(t){return t.town === d.town && t.date === d.date}).style('fill', 'red').attr({r: histDotRadius*2}).moveToFront()
+			townLines.filter(function(f) {return f.town=== d.town}).style('stroke','red').style('stroke-width','1.5px').moveToFront(); 
+			townLines.filter(function(f) {return f.town==="Ethiopia"}).moveToFront()
+			focus.attr("transform", "translate(" + xScale(d.date) + "," + yScale(d.price) + ")");
+		} else if(d.town === "Ethiopia"){//is the line Ethiopia
+			tip.show(d);
+			focus.attr("transform", "translate(" + xScale(d.date) + "," + yScale(d.price) + ")");
+			townLines.filter(function(f) {return f.town==="Ethiopia"}).style('stroke','red').moveToFront(); 
+		}
 
-		//product + ", Mean Price: "+ meanPrice + ', Tot obs: ' + totObs
-		//line chart
-		towns.filter(function(e) {return e.town===d.town}).style('stroke','red').style('stroke-width','1.5px').moveToFront();
-		//town map
-		d3.selectAll('.townDots').filter(function(e){return e.town===d.town}).attr({r: townDotRadius * 1.5, opacity: 1, stroke: "LightBlue"}).style('stroke-width', '2px').moveToFront()
-		d3.selectAll('.townDots').filter(function(e){return e.town!=d.town}).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
-		//state map
-		var regionName = d.region.replace(' ','')
-		d3.selectAll('.boundary-hover#'+regionName).filter(function(e) { return e}).classed('region-boundary',false).classed('boundary-hover-show',true)
-		focus.attr("transform", "translate(" + xScale(d.date) + "," + yScale(d.price) + ")");
-		//d3.selectAll('.boundary-hover#'+stateName).classed('boundary-hover-hide',false).classed('boundary-hover-show',true)		
-		tip.show(d);
 	}
 
 	function mouseoutLine(d) {
@@ -943,28 +969,27 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		var meanPrice = d3.round(d3.mean(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate}), function(g){return g.price}),2)
 		d3.selectAll('.histText').text(product + ", Mean Price: "+ meanPrice + " birr"+', Tot obs: ' + obs)
 		d3.selectAll('.histDots').style('fill', 'silver').attr({r: histDotRadius});
-		//line chart
-		towns.style('stroke','rgb(150,150,150)').style('stroke-width','1px');
-		//var stateName = d.state.replace(' ','')
-		//town map
-		d3.selectAll('.townDots').attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px');
-		//state map
-		var regionName = d.region.replace(' ','')
-		d3.selectAll('.boundary-hover#'+regionName).classed('region-boundary',true).classed('boundary-hover-show',false)
-		focus.attr("transform", "translate(-100,-100)");
-		tip.hide(d);
-	}
+
+		if(masterTownList.filter(function(e){return e.town === d.town})[0].active){
+			focus.attr("transform", "translate(-100,-100)");
+			townLines.filter(function(f){return f.town=== d.town}).style({'stroke': lineColor, 'stroke-width': lineWidth});
+			tip.hide(d);
+		} else if(d.town === "Ethiopia"){
+			townLines.filter(function(f) {return f.town==="Ethiopia"}).style('stroke','green').moveToFront();
+			tip.hide(d);
+		}
+	}*/
 
   	//RESELECTING THE PRODUCT AND REDRAWING THE MAP BASED ON CHANGES
 	d3.select('#productSelectPrice').on('change.map', function(d) {
         var product = d3.select(this).property('value');
-		var dates = $('#slider').slider('values');
+		/*var dates = $('#slider').slider('values');
 		var startDate = sliderMonths[dates[0]];
-   		var endDate = sliderMonths[dates[1]];
+   		var endDate = sliderMonths[dates[1]];*/
         redrawMap(product, startDate, endDate);
     });
 
-    $("#slider").on( "slide", function( event, ui ) {
+    /*$("#slider").on( "slide", function( event, ui ) {
 	    if ((ui.values[0]) >= ui.values[1]) {
 	    	return false;
 	    }
@@ -976,7 +1001,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 	    	redrawMap(product, startDate, endDate);
 	    }
     });
-
+*/
 	function redrawMap(product, startDate, endDate) {
 		townData = getTownData(townPriceData,startDate, endDate, product)
 		regionData = getRegionData(townPriceData,startDate, endDate, product)
@@ -1008,13 +1033,13 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 
 	d3.select('#productSelectPrice').on('change.line', function(d) {
         var product = d3.select(this).property('value');
-		var dates = $('#slider').slider('values');
+		/*var dates = $('#slider').slider('values');
 		var startDate = sliderMonths[dates[0]];
-   		var endDate = sliderMonths[dates[1]];
+   		var endDate = sliderMonths[dates[1]];*/
 	   	var drawVoronoi = true;
         redrawLine(product,startDate,endDate,drawVoronoi);
     });
-    $("#slider").on( "slide", function( event, ui ) {
+    /*$("#slider").on( "slide", function( event, ui ) {
 	    if ((ui.values[0]) >= ui.values[1]) {
 	    	return false;
 	    }
@@ -1038,7 +1063,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 	        var drawVoronoi = true;
 	        redrawLine(product,startDate,endDate,drawVoronoi);
 	    }
-    });
+    });*/
 	function redrawLine(product,startDate,endDate,drawVoronoi) {
 	  	var lineData = reshapeMonthlyPrice(townPriceData,product,startDate,endDate);
 
@@ -1073,7 +1098,6 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 				.on("mouseover", mouseoverLine)
 				.on("mouseout", mouseoutLine);
 	  	}
-
 	}
 }
 
@@ -1100,9 +1124,9 @@ function drawHistogram(townPriceData){
   	//GETTING THE DATA READY
   	var sel = document.getElementById('productSelectPrice'); //selecting the default based on currentinput
   	var product = sel.options[sel.selectedIndex].value; //pulling the value of the selected product
-	var dates = $('#slider').slider('values'); //pulls the date values from the slider
-	var startDate = sliderMonths[dates[0]];
-   	var endDate = sliderMonths[dates[1]];
+	//var dates = $('#slider').slider('values'); //pulls the date values from the slider
+	var startDate = dateFormat.parse("2010-01-01")// sliderMonths[dates[0]];
+   	var endDate = dateFormat.parse("2014-12-01")//sliderMonths[dates[1]];
   	var data = townPriceData.filter(function(d){return d.item == product && d.date>= startDate && d.date <= endDate && d.town != "Ethiopia"});
 
   	//CREATING THE CANVAS AND Y-SCALES
@@ -1189,12 +1213,12 @@ function drawHistogram(townPriceData){
   	d3.select('#productSelectPrice') //changes the product based on user input from the dropdown menu
 	    .on('change.histogram', function(d) {
 	        var product = d3.select(this).property('value')
-	        var dates = $('#slider').slider('values');
+	        /*var dates = $('#slider').slider('values');
 			var startDate = sliderMonths[dates[0]];
-   			var endDate = sliderMonths[dates[1]];
+   			var endDate = sliderMonths[dates[1]];*/
 	        redraw(product,startDate,endDate)
 	    })
-    $("#slider").on( "slide", function( event, ui ) {
+    /*$("#slider").on( "slide", function( event, ui ) {
 	    if ((ui.values[0]) >= ui.values[1]) {
 	    	return false;
 	    }
@@ -1205,7 +1229,7 @@ function drawHistogram(townPriceData){
 	        var product = d3.select('#productSelectPrice').property('value');
 	        redraw(product,startDate,endDate);
 	    }
-    });
+    });*/
   	//REDRAWING ELEMENTS BASED ON PRODUCT SELECTIONS
   	function redraw(product, startDate, endDate){
 	    var data = townPriceData.filter(function(d){return d.item == product && d.date>= startDate && d.date <= endDate});
